--- a/install
+++ b/install
@@ -66,7 +66,7 @@ mount /dev/$sda1 /mnt/boot/efi
 # ------------------------------------------------------
 # Install base packages
 # ------------------------------------------------------
-pacstrap -K /mnt base base-devel git linux linux-firmware linux-headers intel-ucode
+pacstrap -K /mnt base base-devel git linux linux-firmware linux-headers intel-ucode grub efibootmgr
 
 # ------------------------------------------------------
 # Generate fstab
@@ -79,14 +79,17 @@ cat /mnt/etc/fstab
 # ------------------------------------------------------
 mkdir /mnt/archinstall
 cp conf /mnt/archinstall/
+chmod +x /mnt/archinstall/conf
 #cp 2-configuration.sh /mnt/archinstall/
 #cp 3-yay.sh /mnt/archinstall/
 #cp 4-zram.sh /mnt/archinstall/
 #cp 5-timeshift.sh /mnt/archinstall/
 #cp 6-preload.sh /mnt/archinstall/
 #cp snapshot.sh /mnt/archinstall/
-#chmod +x /mnt/archinstall/conf
+
 # ------------------------------------------------------
 # Chroot to installed sytem
 # ------------------------------------------------------
-arch-chroot /mnt ./archinstall/conf
+arch-chroot /mnt 
+chmod +x /archinstall/conf
+./archinstall/conf
