--- a/install
+++ b/install
@@ -65,7 +65,7 @@ cat /mnt/etc/fstab
 # Install configuration scripts
 # ------------------------------------------------------
 mkdir /mnt/archinstall
-cp conf /mnt/archinstall/
+cp arch/conf /mnt/archinstall/
 chmod +x /mnt/archinstall/conf
 #cp 2-configuration.sh /mnt/archinstall/
 #cp 3-yay.sh /mnt/archinstall/
@@ -77,5 +77,4 @@ chmod +x /mnt/archinstall/conf
 # ------------------------------------------------------
 # Chroot to installed sytem
 # ------------------------------------------------------
-chmod +x /archinstall/conf
 arch-chroot /mnt ./archinstall/conf
