--- a/install
+++ b/install
@@ -67,13 +67,7 @@ cat /mnt/etc/fstab
 mkdir /mnt/archinstall
 cp arch/conf /mnt/archinstall/
 chmod +x /mnt/archinstall/conf
-#cp 2-configuration.sh /mnt/archinstall/
-#cp 3-yay.sh /mnt/archinstall/
-#cp 4-zram.sh /mnt/archinstall/
-#cp 5-timeshift.sh /mnt/archinstall/
-#cp 6-preload.sh /mnt/archinstall/
-#cp snapshot.sh /mnt/archinstall/
-
+sed -i s/'# %wheel ALL=(ALL:ALL) ALL'/'%wheel ALL=(ALL:ALL) ALL'/g /mnt/etc/sudoers"
 # ------------------------------------------------------
 # Chroot to installed sytem
 # ------------------------------------------------------
