--- a/install
+++ b/install
@@ -67,7 +67,7 @@ cat /mnt/etc/fstab
 mkdir /mnt/archinstall
 cp arch/conf /mnt/archinstall/
 chmod +x /mnt/archinstall/conf
-sed -i s/'# %wheel ALL=(ALL:ALL) ALL'/'%wheel ALL=(ALL:ALL) ALL'/g /mnt/etc/sudoers"
+sed -i s/'# %wheel ALL=(ALL:ALL) ALL'/'%wheel ALL=(ALL:ALL) ALL'/g /mnt/etc/sudoers
 # ------------------------------------------------------
 # Chroot to installed sytem
 # ------------------------------------------------------
