--- a/install
+++ b/install
@@ -22,8 +22,8 @@ cfdisk --zero /dev/$diskname
 # ------------------------------------------------------
 lsblk
 read -p "Enter the name of the EFI partition (eg. sda1 or nvme0n1p1): " diskpartboot
-read -p "Enter the name of the ROOT partition (eg. sda2 or or nvme0n1p2): " diskpartsys
-# read -p "Enter the name of the Home partition (eg. sda3): " sda3
+read -p "Enter the name of the ROOT partition (eg. sda2 or nvme0n1p2): " diskpartsys
+read -p "Enter the name of the HOME partition (eg. sda3 or nvme0n1p3): " diskhome
 
 # ------------------------------------------------------
 # Sync time
@@ -35,14 +35,14 @@ timedatectl set-ntp true
 # ------------------------------------------------------
 mkfs.fat -F 32 /dev/$diskpartboot
 mkfs.btrfs -f /dev/$diskpartsys
-# mkfs.btrfs -f /dev/$sda3
+mkfs.btrfs -f /dev/$diskhome
 
 # ------------------------------------------------------
 # Mount points for btrfs
 # ------------------------------------------------------
 umount -R /mnt
 mount /dev/$diskpartsys /mnt
-# mount /dev/$sda3 /mnt/home
+mount /dev/$diskhome /mnt/home
 btrfs su cr /mnt/@
 btrfs su cr /mnt/@cache
 btrfs su cr /mnt/@home
@@ -53,7 +53,7 @@ mkdir -p /mnt/{boot/efi,home,.snapshots,var/{cache,log}}
 mount /dev/$diskpartboot /mnt/boot/efi
 mount -o compress=zstd:1,noatime,subvol=@ /dev/$diskpartsys /mnt
 mount -o compress=zstd:1,noatime,subvol=@cache /dev/$diskpartsys /mnt/var/cache
-mount -o compress=zstd:1,noatime,subvol=@home /dev/$diskpartsys /mnt/home
+mount -o compress=zstd:1,noatime,subvol=@home /dev/$diskparthome /mnt/home
 mount -o compress=zstd:1,noatime,subvol=@log /dev/$diskpartsys /mnt/var/log
 mount -o compress=zstd:1,noatime,subvol=@snapshots /dev/$diskpartsys /mnt/.snapshots
 # ------------------------------------------------------
