--- a/install
+++ b/install
@@ -34,30 +34,32 @@ timedatectl set-ntp true
 # Format partitions
 # ------------------------------------------------------
 mkfs.fat -F 32 /dev/$diskpartboot
-mkfs.btrfs -f /dev/$diskpartsys
-mkfs.btrfs -f /dev/$diskhome
+#mkfs.btrfs -f /dev/$diskpartsys
+#mkfs.btrfs -f /dev/$diskhome
+mkfs.ext4 /dev/$diskpartsys
+mkfs.ext4 /dev/$diskhome
 
 # ------------------------------------------------------
 # Mount points for btrfs
 # ------------------------------------------------------
 umount -R /mnt
-mount /dev/$diskpartsys /mnt
-mount /dev/$diskhome /mnt/home
-btrfs su cr /mnt/@
-btrfs su cr /mnt/@cache
-btrfs su cr /mnt/@home
-btrfs su cr /mnt/@snapshots
-btrfs su cr /mnt/@log
+#mount /dev/$diskpartsys /mnt
+#mount /dev/$diskhome /mnt/home
+#btrfs su cr /mnt/@
+#btrfs su cr /mnt/@cache
+#btrfs su cr /mnt/@home
+#btrfs su cr /mnt/@snapshots
+#btrfs su cr /mnt/@log
 
 mkdir -p /mnt/{boot/efi,home,.snapshots,var/{cache,log}}
-mount /dev/$diskpartboot /mnt/boot/efi
-mount -o compress=zstd:1,noatime,subvol=@ /dev/$diskpartsys /mnt
-mount -o compress=zstd:1,noatime,subvol=@cache /dev/$diskpartsys /mnt/var/cache
-mount -o compress=zstd:1,noatime,subvol=@home /dev/$diskparthome /mnt/home
-mount -o compress=zstd:1,noatime,subvol=@log /dev/$diskpartsys /mnt/var/log
-mount -o compress=zstd:1,noatime,subvol=@snapshots /dev/$diskpartsys /mnt/.snapshots
+#mount /dev/$diskpartboot /mnt/boot/efi
+#mount -o compress=zstd:1,noatime,subvol=@ /dev/$diskpartsys /mnt
+#mount -o compress=zstd:1,noatime,subvol=@cache /dev/$diskpartsys /mnt/var/cache
+#mount -o compress=zstd:1,noatime,subvol=@home /dev/$diskparthome /mnt/home
+#mount -o compress=zstd:1,noatime,subvol=@log /dev/$diskpartsys /mnt/var/log
+#mount -o compress=zstd:1,noatime,subvol=@snapshots /dev/$diskpartsys /mnt/.snapshots
 
-sleep 10
+sleep 20s
 # ------------------------------------------------------
 # Install base packages
 # ------------------------------------------------------
