--- a/install
+++ b/install
@@ -52,6 +52,11 @@ umount -R /mnt
 #btrfs su cr /mnt/@log
 
 mkdir -p /mnt/{boot/efi,home,.snapshots,var/{cache,log}}
+
+mount /dev/$diskpartboot
+mount /dev/$diskpartsys
+mount /dev/$diskhome
+
 #mount /dev/$diskpartboot /mnt/boot/efi
 #mount -o compress=zstd:1,noatime,subvol=@ /dev/$diskpartsys /mnt
 #mount -o compress=zstd:1,noatime,subvol=@cache /dev/$diskpartsys /mnt/var/cache
