--- a/install
+++ b/install
@@ -5,70 +5,47 @@
 # ------------------------------------------------------
 sed -i s/'#Color'/'Color'/g /etc/pacman.conf
 sed -i s/'#ParallelDownloads = 5'/'ParallelDownloads = 20'/g /etc/pacman.conf
-
-lsblk
-#read -p "Enter disk name: " diskname
-diskname=sda
-
-sed -e 's/\s*\([\+0-9a-zA-Z]*\).*/\1/' << FDISK_CMDS  | fdisk /dev/$diskname
-g      # create new GPT partition
-n      # add new partition
-1      # partition number
-       # default - first sector 
-+512MiB # partition size
-n      # add new partition
-2      # partition number
-       # default - first sector 
-       # default - last sector 
-t      # change partition type
-1      # partition number
-1      # Linux filesystem
-t      # change partition type
-2      # partition number
-20     # Linux filesystem
-w      # write partition table and exit
-FDISK_CMDS
-
-
-#cfdisk --zero /dev/$diskname
-
-#Fix read partition!
-
-diskpartboot=sda1
-diskpartsys=sda2
-#diskhome=sda3
-
-
 # ------------------------------------------------------
 # Enter partition names
 # ------------------------------------------------------
 lsblk
-#read -p "Enter the name of the EFI partition (eg. sda1 or nvme0n1p1): " diskpartboot
-#read -p "Enter the name of the ROOT partition (eg. sda2 or nvme0n1p2): " diskpartsys
-#read -p "Enter the name of the HOME partition (eg. sda3 or nvme0n1p3): " diskhome
-
+read -p "Enter the name of the EFI partition (eg. sda1): " sda1
+read -p "Enter the name of the ROOT partition (eg. sda2): " sda2
+# read -p "Enter the name of the VM partition (keep it empty if not required): " sda3
 # ------------------------------------------------------
 # Sync time
 # ------------------------------------------------------
 timedatectl set-ntp true
-
 # ------------------------------------------------------
-# EXT 4
+# Format partitions
 # ------------------------------------------------------
-mkfs.fat -F 32 /dev/$diskpartboot
-mkfs.ext4 /dev/$diskpartsys
-#mkfs.ext4 /dev/$diskhome
+mkfs.fat -F 32 /dev/$sda1;
+mkfs.btrfs -f /dev/$sda2
+# mkfs.btrfs -f /dev/$sda3
+# ------------------------------------------------------
+# Mount points for btrfs
+# ------------------------------------------------------
+mount /dev/$sda2 /mnt
+btrfs su cr /mnt/@
+btrfs su cr /mnt/@cache
+btrfs su cr /mnt/@home
+btrfs su cr /mnt/@snapshots
+btrfs su cr /mnt/@log
+umount /mnt
 
-mkdir -p /mnt/{boot/efi,home,var/{cache,log}}
-
-mount /dev/$diskpartboot /mnt/boot/efi
-mount /dev/$diskpartsys /mnt
-#mount /dev/$diskhome /mnt
-
+mount -o compress=zstd:1,noatime,subvol=@ /dev/$sda2 /mnt
+mkdir -p /mnt/{boot/efi,home,.snapshots,var/{cache,log}}
+mount -o compress=zstd:1,noatime,subvol=@cache /dev/$sda2 /mnt/var/cache
+mount -o compress=zstd:1,noatime,subvol=@home /dev/$sda2 /mnt/home
+mount -o compress=zstd:1,noatime,subvol=@log /dev/$sda2 /mnt/var/log
+mount -o compress=zstd:1,noatime,subvol=@snapshots /dev/$sda2 /mnt/.snapshots
+mount /dev/$sda1 /mnt/boot/efi
+# mkdir /mnt/vm
+# mount /dev/$sda3 /mnt/vm
 # ------------------------------------------------------
 # Install base packages
 # ------------------------------------------------------
-pacstrap -K /mnt base base-devel linux linux-firmware linux-headers grub efibootmgr
+pacstrap -K /mnt base base-devel git linux linux-firmware vim openssh reflector rsync amd-ucode
 # ------------------------------------------------------
 # Generate fstab
 # ------------------------------------------------------
@@ -78,13 +55,8 @@ cat /mnt/etc/fstab
 # Install configuration scripts
 # ------------------------------------------------------
 mkdir /mnt/archinstall
-cp arch/conf /mnt/archinstall/
-chmod +x /mnt/archinstall/conf
+cp conf /mnt/arch/
 # ------------------------------------------------------
-# Add group wheel to sudo
+# Chroot to installed sytem
 # ------------------------------------------------------
-sed -i s/'# %wheel ALL=(ALL:ALL) ALL'/'%wheel ALL=(ALL:ALL) ALL'/g /mnt/etc/sudoers
-# ------------------------------------------------------
-# Chroot to installed system
-# ------------------------------------------------------
-arch-chroot /mnt ./archinstall/conf
+arch-chroot /mnt ./arch/conf
