--- a/install
+++ b/install
@@ -56,6 +56,11 @@ cat /mnt/etc/fstab
 # ------------------------------------------------------
 mkdir /mnt/archinstall
 cp conf /mnt/arch/
+chmod +x /mnt/archinstall/conf
+# ------------------------------------------------------
+# Add group wheel to sudo
+# ------------------------------------------------------
+sed -i s/'# %wheel ALL=(ALL:ALL) ALL'/'%wheel ALL=(ALL:ALL) ALL'/g /mnt/etc/sudoers
 # ------------------------------------------------------
 # Chroot to installed sytem
 # ------------------------------------------------------
