--- a/install
+++ b/install
@@ -8,7 +8,7 @@ sed -i s/'#ParallelDownloads = 5'/'ParallelDownloads = 20'/g /etc/pacman.conf
 # ------------------------------------------------------
 # fdisk partition
 # ------------------------------------------------------
-$sed -e 's/\s*\([\+0-9a-zA-Z]*\).*/\1/' << FDISK_CMDS  | fdisk /dev/$diskname
+$sed -e 's/\s*\([\+0-9a-zA-Z]*\).*/\1/' << FDISK_CMDS  | fdisk /dev/sda
 g      # create new GPT partition
 n      # add new partition
 1      # partition number
